Encryption/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socks-shop-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ubahakwe.xyz
    secretName: socks-shop-tls
  rules:
  - host: ubahakwe.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: socks-shop
            port:
              number: 80
